--- a/examples/browser-umd/index.html
+++ b/examples/browser-umd/index.html
@@ -84,7 +84,7 @@
 	</style>
 </head><body>
 	<h1>HSL Gen</h1>
-	<p>UMD edition 0.3.0 &middot; <a href="https://github.com/famebot/hsl-gen">Source code on GitHub</a></p>
+	<p>UMD edition 0.3.1 &middot; <a href="https://github.com/famebot/hsl-gen">Source code on GitHub</a></p>
 	<button onclick="window.location.reload()">🔄 Reload Color Scheme 🌈</button>
 	<p>💡 Supports <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/@media/prefers-color-scheme">light and dark mode</a>.</p>
 	<p>
@@ -93,7 +93,7 @@
 		<a href="https://webkit.org/blog/8892/dark-mode-in-web-inspector/">Safari</a>, 
 		or <a href="https://firefox-source-docs.mozilla.org/devtools-user/page_inspector/how_to/examine_and_edit_css/index.html#view-media-rules-for-prefers-color-scheme">Firefox</a>.
 	</p>
-	<script src="https://unpkg.com/@famebot/hsl-gen@0.2.2/dist/hsl-gen.umd.js"></script>
+	<script src="https://unpkg.com/@famebot/hsl-gen@0.3.1/dist/hsl-gen.umd.js"></script>
 	<script>
 		const colorScheme = hslGen();
 		console.log(colorScheme);
@@ -123,7 +123,6 @@
 		lightPreference.addEventListener("change", e => e.matches && activateColorScheme());
 		activateColorScheme();
 		
-		// quick hack til 0.3.0 is up with hue property, currently includes commas when hue is 2 digits
-		document.querySelector('h1').innerHTML += ` (hue: ${colorScheme.huehsl.slice(4,7)})`;
+		document.querySelector('h1').innerHTML += ` (hue: ${colorScheme.hue})`;
 	</script>
 </body></html>
