--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -257,7 +257,7 @@
 			</figure>
 		</li>
 	</ul>
-	<script src="https://unpkg.com/@famebot/chromagen/dist/chromagen.umd.js"></script>
+	<script src="./chromagen.umd.js"></script>
 	<script>
 		const rainbow = () => {
 			const colorScheme = chromagen();
