add transitions to browser example

--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -42,6 +42,7 @@
 			min-height: 100vh;
 			min-height: 100dvh;
 			text-align: center;
+			transition: background-color, background-image, color 0.5s ease-out;
 		}
 		a[href] {
 			color: var(--huedarker);
@@ -61,6 +62,7 @@
 			color: var(--huedarker);
 			font-size: 1.5em;
 			padding: 0.25em 0.5em;
+			transition: background-color, background-image, border-color, color 0.5s ease-out;
 		}
 		button:focus,
 		button:hover {
@@ -94,6 +96,7 @@
 			height: var(--swatch-size);
 			width: var(--swatch-size);
 			margin: 0 auto;
+			transition: background-color 0.5s ease-out;
 		}
 		.swatches figcaption {
 			margin-top: 0.5rem;
